syntax = "proto3";
import "athenaapis/structures.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.athena.api.service";

package WorkOrderService;

service WorkOrderService{
  rpc ChangeOrderPriority(structures.ChangePriorityRequest)returns(structures.WorkOrder){}
  rpc Close(TransitionOrderRequest)returns(structures.WorkOrder){}
  rpc Finish(TransitionOrderRequest)returns(structures.WorkOrder){}
  rpc Hold(TransitionOrderRequest)returns(structures.WorkOrder){}
  rpc Open(TransitionOrderRequest)returns(structures.WorkOrder){}
  rpc Quarantine(TransitionOrderRequest)returns(structures.WorkOrder){}
  rpc Release(TransitionOrderRequest)returns(structures.WorkOrder){}
  rpc DeleteOrder(DeleteOrderRequest)returns(google.protobuf.Empty){}
  rpc SaveWorkOrder(structures.WorkOrder)returns(structures.WorkOrder){}
  rpc Ship(TransitionOrderRequest)returns(structures.WorkOrder){}
  rpc UndoClose(TransitionOrderRequest)returns(structures.WorkOrder){}

  // This method is used to record a transaction indicating that this
  // WorkOrder and all of its children (any Lots, Units) have
  // started at the route step specified.
  rpc StartAtRouteStep(StartOrderRequest)returns(structures.WorkOrder){}

  //  This method is used to record a transaction indicating that this
  //  WorkOrder and all of its children (any  Lots, Units) have
  //  completed the route step specified.
  rpc CompleteAtRouteStep(CompleteOrderRequest)returns(structures.WorkOrder){}
}

enum TransitionOrderState{
  OrderClose = 0;
  OrderFinish = 1;
  OrderHold = 2;
  OrderOpen = 3;
  OrderQuarantine = 4;
  OrderRelease = 5;
  OrderShip = 6;
  OrderUndoClose = 7;
}

message StartOrderRequest{
  uint64 order_id = 1;
  string route_step_number = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
  bool override_route_enforcement = 5;
}

message CompleteOrderRequest{
  uint64 order_id = 1;
  string route_step_number = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
  bool override_route_enforcement = 5;
  string complete_reason = 6;
}

message TransitionOrderRequest{
  uint64 order_id = 1;
  string reason = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
  TransitionOrderState transitionState = 5;
  bool override_route_enforcement = 6;
}

message DeleteOrderRequest{
  uint64 order_id = 1;
  string delete_reason = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
}
